eJkiva project working correctly on Hibernate

--- a/Web application workspace/eJkiva/pom.xml
+++ b/Web application workspace/eJkiva/pom.xml
@@ -4,32 +4,29 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>eJkiva</groupId>
-  <artifactId>eJkiva_web_project</artifactId>
+  <groupId>org.mondragon</groupId>
+  <artifactId>eJkiva</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>eJkiva_web_project Maven Webapp</name>
-  <!-- FIXME change it to the project's website 
-  <url>http://www.eJkiva.com</url>-->
-  <url>http://ejkiva.duckdns.org:8080</url>
+  <name>eJkiva Maven Webapp</name>
+  <!-- FIXME change it to the project's website -->
+  <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-    <jtwig.version>5.85.0.RELEASE</jtwig.version>
   </properties>
 
   <dependencies>
-	    <dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
 		<dependency>
 		    <groupId>org.jacoco</groupId>
 		    <artifactId>jacoco-maven-plugin</artifactId>
@@ -41,7 +38,11 @@
 		    <artifactId>hibernate-core</artifactId>
 		    <version>5.2.2.Final</version>
 		</dependency>
-		
+		<dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc7</artifactId>
+            <version>12.1.0</version>
+        </dependency> 
 		<dependency>
 		  <groupId>org.springframework</groupId>
 		  <artifactId>spring-webmvc</artifactId>
@@ -103,18 +104,17 @@
 			<artifactId>tiles-el</artifactId>
 			<version>3.0.5</version>
 		</dependency>  
-		
-		<!-- JTwig -->
+		<!-- https://mvnrepository.com/artifact/com.atlassian.clover/clover -->
 		<dependency>
-		    <groupId>org.jtwig</groupId>
-		    <artifactId>jtwig-spring-boot-starter</artifactId>
-		    <version>5.87.0.RELEASE</version>
-		    <scope>compile</scope>
+		    <groupId>com.atlassian.clover</groupId>
+		    <artifactId>clover</artifactId>
+		    <version>4.0.0</version>
 		</dependency>
+
   </dependencies>
 
   <build>
-    <finalName>eJkiva_web_project</finalName>
+    <finalName>eJkiva</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
@@ -145,79 +145,8 @@
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
-	    </plugin>
-	    <plugin> 
-	    	<groupId>org.apache.maven.plugins</groupId> 
-	    	<artifactId>maven-javadoc-plugin</artifactId> 
-	    	<version>2.10.3</version> 
-	    </plugin>
-	    <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-site-plugin</artifactId>
-            <version>3.7.1</version>
         </plugin>
-
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-project-info-reports-plugin</artifactId>
-            <version>3.0.0</version>
-        </plugin>
-		<plugin>
-			<groupId>de.oscillation.maven</groupId>
-			<artifactId>doxygen-maven-plugin</artifactId>
-			<version>0.1.0</version>
-			<configuration>
-				<workingDirectory>${basedir}</workingDirectory>
-				<executable>doxygen</executable>
-				<doxyfile>Doxyfile</doxyfile>
-				<autogen>false</autogen>
-			</configuration>
-			<executions>
-				<execution>
-					<id>clean</id>
-					<phase>clean</phase>
-					<goals>
-						<goal>clean</goal>
-					</goals>
-				</execution>
-				<execution>
-					<id>generate</id>
-					<phase>prepare-package</phase>
-					<goals>
-						<goal>generate</goal>
-					</goals>
-				</execution>
-			</executions>
-		</plugin>
-        <plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-surefire-plugin</artifactId>
-				<configuration>
-					<useUIHarness>false</useUIHarness>
-					<useUIThread>false</useUIThread>
-					<excludes>
-						<exclude>**/TestErrorReporter.java</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
       </plugins>
     </pluginManagement>
   </build>
-
-	<repositories>
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-            <id>BintrayJCenter</id>
-            <url>https://jcenter.bintray.com/</url>
-        </repository>
-	</repositories>
-  
-  
 </project>
